# sdf-hoa

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  license.md  readme.md
func_tests/: CMakeLists.txt  ansistrm.py  config.py  func_tests.py  run_func_tests.py  utils.py
func_tests/aag-files/: amba2b10n.aag  amba2b10y.aag  eq.aag  ex1.aag  ex2.aag  ex3.aag  ex4.aag  genbuf4c4n.aag  genbuf4c4y.aag  genbuf4c6n.aag  genbuf4c6y.aag  handshake2.aag  handshake2_2.aag  hot_bit_encoder.aag  mult_bool_matrix_3_3_3.aag  not_eq.aag  unrealizable.aag
func_tests/hoa-files/real/: amba_decomposed_arbiter_2.hoa  amba_decomposed_arbiter_2.part  amba_decomposed_encode_2.hoa  amba_decomposed_encode_2.part  amba_decomposed_lock_2.hoa  amba_decomposed_lock_2.part  collector_v1_2.hoa  collector_v1_2.part  collector_v1_3.hoa  collector_v1_3.part  detector_2.hoa  detector_2.part  detector_4.hoa  detector_4.part  full_arbiter_2.hoa  full_arbiter_2.part  full_arbiter_enc_2.hoa  full_arbiter_enc_2.part  lilydemo03.hoa  lilydemo03.part  load_balancer_2.hoa  load_balancer_2.part  loadcomp2.hoa  loadcomp2.part  ltl2dba_beta_2.hoa  ltl2dba_beta_2.part  ltl2dpa01.hoa  ltl2dpa01.part  mux_2.hoa  mux_2.part  prioritized_arbiter_2.hoa  prioritized_arbiter_2.part  round_robin_arbiter_2.hoa  shift_2.hoa  shift_2.part  simple_arbiter_2.hoa  simple_arbiter_2.part
func_tests/hoa-files/unreal/: detector_unreal_2.hoa  detector_unreal_2.part  detector_unreal_4.hoa  detector_unreal_4.part  full_arbiter_unreal1_3_2.hoa  full_arbiter_unreal1_3_2.part  lilydemo01.hoa  lilydemo02.hoa  lilydemo02.part  lilydemo11.hoa  lilydemo11.part  lilydemo15.hoa  lilydemo15.part  lilydemo16.hoa  lilydemo16.part  ltl2dba_theta_2.hoa  ltl2dba_theta_2.part  round_robin_arbiter_unreal1_2_3.hoa  round_robin_arbiter_unreal1_2_3.part  round_robin_arbiter_unreal1_2_6.hoa  round_robin_arbiter_unreal1_2_6.part  simple_arbiter_unreal2_2.hoa
src/: ArgsParser.hpp  CMakeLists.txt  Synth.cpp  Synth.hpp  Timer.hpp  atm_helper.hpp  bdd_visitor.cpp  bdd_visitor.hpp  dump_det_as_bdd.cpp  dump_det_as_bdd.hpp  ehoa_parser.cpp  ehoa_parser.hpp  extrasources.make  game_solver.cpp  game_solver.hpp  generate_qcir.cpp  generate_qcir.hpp  graph.cpp  graph.hpp  graph_algo.cpp  graph_algo.hpp  k_reduce.cpp  k_reduce.hpp  logger_instance.cpp  ltl_parser.cpp  ltl_parser.hpp  main.cpp  main_generate_qcir.cpp  main_hoa.cpp  main_reg.cpp  main_translator.cpp  my_assert.hpp  myassert.hpp  partition_tst_asgn.cpp  partition_tst_asgn.hpp  reg_reduction.cpp  reg_reduction.hpp  syntcomp_constants.hpp  synthesizer.cpp  synthesizer.hpp  (+3 more)
src/reg/: asgn.hpp  atm_parsing_naming.hpp  data_domain_interface.hpp  eq_domain.cpp  eq_domain.hpp  eq_partition.cpp  eq_partition.hpp  graph.cpp  graph.hpp  graph_algo.cpp  graph_algo.hpp  lin_order_domain.cpp  lin_order_domain.hpp  mixed_domain.cpp  mixed_domain.hpp  ord_partition.cpp  ord_partition.hpp  order_domain.cpp  order_domain.hpp  partition.cpp  partition.hpp  reg_reduction.cpp  reg_reduction.hpp  reg_utils.hpp  special_graph.cpp  special_graph.hpp  tst_asgn.cpp  tst_asgn.hpp  types.hpp  utils.hpp
src/reg/backup/: ord_partition.cpp  order_domain.cpp  order_domain.hpp
tests/: CMakeLists.txt  test_graph.cpp  test_reg_translator.cpp  tests.cpp  tests_synt.cpp
tests/specs/: arbiter.tlsf  outputs_only.tlsf  simple_arbiter_3.tlsf  testing_unknown_APs.tlsf
tests/specs/hoa/: full_arbiter.ehoa  full_arbiter_unreal1.ehoa  load_balancer.ehoa  mealy_moore.ehoa  round_robin_arbiter.ehoa  simple_arbiter.ehoa
